# Simulateur-3D-Erosion-de-terrain

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  imgui.ini  setup_env.sh
Shaders/: shader.fs  shader.vs
include/: Camera.hpp  FaultFormationTerrain.hpp  Frustrum.hpp  Gui.hpp  HydraulicErosion.hpp  MidpointDisplacement.hpp  Patch.hpp  PerlinNoiseTerrain.hpp  RendererManager.hpp  Shader.hpp  Terrain.hpp  TerrainApp.hpp  Texture.hpp  ThermalErosion.hpp  Validation.hpp  ValidationTest.hpp  terrain.hpp
performance/: performance.py
performance/data/: performance_faultFormation.csv  performance_midpointDisplacement.csv  performance_perlinNoise.csv
shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  terrain.fs  terrain.vs
src/: Camera.cpp  FaultFormationTerrain.cpp  Frustrum.cpp  Gui.cpp  HeightField.h  HydraulicErosion.cpp  HydraulicErosion.h  MidpointDisplacement.cpp  Patch.cpp  PerlinNoiseTerrain.cpp  RendererManager.cpp  Shader.cpp  Terrain.cpp  TerrainApp.cpp  Texture.cpp  ThermalErosion.cpp  ThermalErosion.h  ValidationTest.cpp  main.cpp  mainGui.cpp  terrain.cpp  terrain.hpp
tests/: CMakeLists.txt  test-camera.cpp  test-camera.hpp  test-runner.cpp  test-shader.cpp  test-shader.hpp
validation/: validation.sh  validation_plot.py
